--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="chat-container">
         <div class="user-bar">
-            <div class="avatar"><img src="https://ugc.production.linktr.ee/358d493c-48ff-4106-ba70-ee1fd8e4eb50_6f431c66-4564-4a22-a5f4-98c36c0420dc-Original.jpeg?io=true&size=avatar-v3_0" alt="Avatar"></div>
-            <div class="name">Opina Pro</div>
-            <div class="status">Online</div>
+            <div class="avatar"><img id="avatar" src="" alt="Avatar"></div>
+            <div class="name" id="display-name"></div>
+            <div class="status" id="status"></div>
         </div>
         <div class="chat-box">
             <div class="message typebot-host-bubble">
@@ -45,7 +45,6 @@
                 <div class="bubble-typing">Digitando...</div> 
             </div>
         </div>
-        <!--  Removido o container da chat-input-->
     </div>
     <script src="script.js"></script>
 </body>
