--- a/personalizar/configuração.html
+++ b/personalizar/configuração.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Configuração do Typebot</title>
-    <link rel="stylesheet" href="config-style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Configuração do Typebot</title>
+  <link rel="stylesheet" href="config-style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Configuração do Typebot</h1>
-        <form id="typebot-form">
-            <label for="typebot-name">Nome do Typebot:</label>
-            <input type="text" id="typebot-name" placeholder="Nome do Typebot" required>
-            
-            <div id="messages-container">
-                <h3>Mensagens:</h3>
-            </div>
-            <p id="typebot-id-display"></p>
-
-            <button type="button" id="add-message">Adicionar Mensagem</button>
-            <button type="button" id="add-input-condition">Adicionar Condição com Input</button>
-<<<<<<< Updated upstream
-=======
-            <button type="button" id="add-email-message">Adicionar Mensagem com Email</button>
-            <button type="button" id="add-response-button">Adicionar Botão de Resposta</button> <!-- Novo botão -->
-
->>>>>>> Stashed changes
-            <button type="submit">Salvar Typebot</button>
-        </form>
+<div class="container">
+  <h1>Configuração do Typebot</h1>
+  <form id="typebot-form">
+    <label for="typebot-name">Nome do Typebot:</label>
+    <input type="text" id="typebot-name" placeholder="Nome do Typebot" required>
+    <label for="typebot-avatar">Avatar URL:</label>
+    <input type="text" id="typebot-avatar" placeholder="URL da imagem do avatar">
+    <label for="typebot-display-name">Nome a ser exibido:</label>
+    <input type="text" id="typebot-display-name" placeholder="Nome a ser exibido no chat">
+    <label for="typebot-status">Status:</label>
+    <input type="text" id="typebot-status" placeholder="Status (Ex: Online, Offline)">
+    <div id="messages-container">
+      <h3>Mensagens:</h3>
     </div>
+    <p id="typebot-id-display"></p>
+    <button type="button" id="add-message">Adicionar Mensagem</button>
+    <button type="button" id="add-input-condition">Adicionar Condição com Input</button>
+    <button type="button" id="add-email-message">Adicionar Mensagem com Email</button>
+    <button type="button" id="add-response-button">Adicionar Botão de Resposta</button>
+    <button type="button" id="add-redirect-link">Adicionar Link de Redirecionamento</button> 
+    <button type="submit">Salvar Typebot</button>
+  </form>
+</div>
 
-    <script src="config-script.js"></script>
+<script src="config-script.js"></script>
 </body>
 </html>
