--- a/personalizar/configuração.html
+++ b/personalizar/configuração.html
@@ -23,10 +23,10 @@
     </div>
     <p id="typebot-id-display"></p>
     <button type="button" id="add-message">Adicionar Mensagem</button>
-    <button type="button" id="add-input-condition">Adicionar Condição com Input</button>
-    <button type="button" id="add-email-message">Adicionar Mensagem com Email</button>
-    <button type="button" id="add-response-button">Adicionar Botão de Resposta</button>
-    <button type="button" id="add-redirect-link">Adicionar Link de Redirecionamento</button> 
+    <button type="button" id="add-input-condition">Adicionar input do usuario</button>
+    <button type="button" id="add-email-message">Adicionar Mensagem pedindo o email do user</button>
+    <button type="button" id="add-response-button">Adicionar Botão de alternativa de resposta</button>
+    <button type="button" id="add-redirect-link">Adicionar mensagem de redirecionamento</button> 
     <button type="submit">Salvar Typebot</button>
   </form>
 </div>
