--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="status" id="status"></div>
         </div>
         <div class="chat-box" id="chat-box">
-            
+            <!-- Placeholder for dynamically loaded messages -->
         </div>
     </div>
     <script src="script.js"></script>
