--- a/personalizar/configuração.html
+++ b/personalizar/configuração.html
@@ -27,6 +27,7 @@
     <button type="button" id="add-email-message">Adicionar Mensagem pedindo o email do user</button>
     <button type="button" id="add-response-button">Adicionar Botão de alternativa de resposta</button>
     <button type="button" id="add-redirect-link">Adicionar mensagem de redirecionamento</button> 
+    <button type="button" id="add-star-rating">Adicionar Avaliação</button> <!-- Novo botão -->
     <button type="submit">Gerar Typebot</button>
   </form>
 </div>
