--- a/personalizar/configuração.html
+++ b/personalizar/configuração.html
@@ -28,6 +28,7 @@
     <button type="button" id="add-response-button">Adicionar Botão de alternativa de resposta</button>
     <button type="button" id="add-redirect-link">Adicionar mensagem de redirecionamento</button> 
     <button type="button" id="add-star-rating">Adicionar Avaliação</button> <!-- Novo botão -->
+    <button type="button" id="add-simple-response-button">Adicionar Botão de Resposta Simples</button>
     <button type="submit">Gerar Typebot</button>
   </form>
 </div>
